Errores solucionados y proyecto finalizado